Monitoring/ingress-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - stio-gateway
  http:
    - match:
      - uri:
          prefix: /grafana
      route:
        - destination:
            host: prometheus-grafana.default.svc.cluster.local
            port:
              number: 80
